overflow fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,233 @@ body {
   overflow-x: hidden;
 }
 
+
+.left-button-align{
+  display: flex;
+  align-items: end;
+}
+
+
+
+
+
+
+ .button-wrapper {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+  position: relative;
+  width: fit-content; 
+}
+
+
+.button-text {
+  background: linear-gradient(to right, #2f5fa7, #1f4e3f);
+  font-family: "Poppins", sans-serif;
+  color: white;
+  font-size: 22px;
+  font-weight: 400;
+  padding: 15px 25px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  transition: 0.3s;
+  left: 5px;
+}
+
+
+.curve-shape {
+  width: 13px;
+  height: 22px;
+  background: linear-gradient(to right, #2f5fa7, #1f4e3f);
+  position: relative;
+  z-index: -1;
+  border-radius: 1px;
+}
+
+
+.button-icon-container {
+ padding: 20px;
+  background: linear-gradient(to right, #2f5fa7, #1f4e3f);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.button-icon-container img {
+  width: 18px;
+  height: 18px;
+}
+
+
+.button-wrapper:hover {
+  transform: scale(1.05);
+}
+
+
+
+
+
+
+
+
+
+
+ .button-wrapper-who-we-are {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+  position: relative;
+  width: fit-content; 
+}
+
+
+.button-text-who-we-are {
+  background: white;
+  font-family: "Poppins", sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 400;
+  padding: 15px 25px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  transition: 0.3s;
+  left: 5px;
+}
+
+
+.curve-shape-who-we-are{
+  width: 13px;
+  height: 22px;
+  background: white;
+  position: relative;
+  z-index: -1;
+  border-radius: 1px;
+}
+
+
+.button-icon-container-who-we-are {
+ padding: 20px;
+  background: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.button-icon-container-who-we-are img {
+  width: 18px;
+  height: 18px;
+}
+
+
+.button-wrapper-who-we-are:hover {
+  transform: scale(1.05);
+}
+
+
+
+.right-button-align{
+  display: flex;
+  align-items: end;
+  justify-content: end;
+}
+
+
+
+
+
+
+ .button-wrapper-footer {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+  position: relative;
+  width: fit-content; 
+}
+
+
+.button-text-footer {
+  background: white;
+  font-family: "Poppins", sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 400;
+  padding: 15px 25px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  transition: 0.3s;
+  left: 5px;
+}
+
+
+.curve-shape-footer {
+  width: 13px;
+  height: 22px;
+  background: white;
+  position: relative;
+  z-index: -1;
+  border-radius: 1px;
+}
+
+
+.button-icon-container-footer {
+ padding: 20px;
+  background: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.button-icon-container-footer img {
+  width: 18px;
+  height: 18px;
+}
+
+
+.button-wrapper-footer:hover {
+  transform: scale(1.05);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .container {
   padding-left: 30px;
   padding-right: 30px;
@@ -1375,11 +1602,72 @@ footer {
   .custom-padding-footer {
     padding-top: 50px;
   }
+  .custiom-grid-4 {
+    gap: 30px;
+  }
+
+
+  .button-text{
+    padding: 15px 15px;
+    font-size: 15px;
+  }
+  .button-icon-container{
+    padding: 16px;
+  }
+
+  .button-text-who-we-are{
+    padding: 15px 15px;
+    font-size: 15px;
+  }
+  .button-icon-container-who-we-are {
+    padding: 16px;
+  }
+
+  .button-text-footer{
+    padding: 15px 15px;
+    font-size: 15px;
+  }
+  .button-icon-container-footer {
+    padding: 16px;
+  }
+
+
+
 }
 
 /* tab view */
 
 @media (min-width: 768px) and (max-width: 1023px) {
+
+
+  .button-text{
+    padding: 15px 15px;
+    font-size: 15px;
+  }
+  .button-icon-container{
+    padding: 16px;
+  }
+
+  .button-text-who-we-are{
+    padding: 15px 15px;
+    font-size: 15px;
+  }
+  .button-icon-container-who-we-are {
+    padding: 16px;
+  }
+
+  .button-text-footer{
+    padding: 15px 15px;
+    font-size: 15px;
+  }
+  .button-icon-container-footer {
+    padding: 16px;
+  }
+
+
+
+
+
   .blogsection {
     display: none;
   }
@@ -1467,7 +1755,7 @@ footer {
     z-index: -1;
   }
   .custiom-grid-4 {
-    gap: 20px;
+    gap: 30px;
     grid-template-columns: 1fr;
     grid-template-areas:
       "second-column" " first-column"
@@ -1506,7 +1794,7 @@ footer {
   }
 
   .who-we-are {
-    height: 500px;
+    height: 480px;
   }
 
   .rotation-slider-titile {
@@ -1634,6 +1922,38 @@ footer {
 /* mobile view  */
 
 @media (min-width: 320px) and (max-width: 767px) {
+  
+  
+  .button-text{
+    padding: 14px 14px;
+    font-size: 14px;
+  }
+  .button-icon-container{
+    padding: 14px;
+  }
+
+  .button-text-who-we-are{
+    padding: 14px 14px;
+    font-size: 14px;
+  }
+  .button-icon-container-who-we-are {
+    padding: 14px;
+  }
+
+  .button-text-footer{
+    padding: 14px 14px;
+    font-size: 14px;
+  }
+  .button-icon-container-footer {
+    padding: 14px;
+  }
+
+  .right-button-align {
+    justify-content: start;
+  }
+
+
+
   .blogsection {
     display: none;
   }
